--- a/styles/main.css
+++ b/styles/main.css
@@ -598,6 +598,7 @@ a {
 
 .grid-wrapper {
   padding-top: 20px;
+  max-width: 1200px;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -743,6 +744,11 @@ a {
 }
 
 .boguswrapper {
+  background: linear-gradient(-45deg, #d68665, #138086, #534666, #cd7672);
+  background-size: 100% 100%;
+  animation: gradient 15s ease infinite;
+  height: 100%;
+
   overflow: hidden;
   position: relative;
 }
