--- a/styles/main.css
+++ b/styles/main.css
@@ -33,9 +33,9 @@ body {
 
 body {
   background: linear-gradient(-45deg, #d68665, #138086, #534666, #cd7672);
-  background-size: 100% 100%;
+  background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  height: 100%;
+  height: 125%;
 
   display: flex;
   align-items: center;
@@ -752,6 +752,7 @@ a {
 .boguswrapper {
   background: linear-gradient(-45deg, #d68665, #138086, #534666, #cd7672);
   background-size: 100% 100%;
+  background-color: #000000;
   animation: gradient 15s ease infinite;
   height: 100%;
   display: block;
