--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@ body {
   background: linear-gradient(-45deg, #d68665, #138086, #534666, #cd7672);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  height: 125%;
+  height: 100%;
 
   display: flex;
   align-items: center;
@@ -750,12 +750,7 @@ a {
 }
 
 .boguswrapper {
-  background: linear-gradient(-45deg, #d68665, #138086, #534666, #cd7672);
-  background-size: 100% 100%;
-  background-color: #000000;
-  animation: gradient 15s ease infinite;
-  height: 100%;
-  display: block;
   overflow: hidden;
   position: relative;
+  background-color: transparent;
 }
